button whitespace fix

--- a/src/app/components/reading-results/reading-results.component.scss
+++ b/src/app/components/reading-results/reading-results.component.scss
@@ -3,6 +3,10 @@
     flex-direction: column;
     align-items: center;
 
+    button h2 {
+        white-space: normal;
+    }
+
     margin-top: -1rem;
 
     h1 {
